Исправлен расчета длительности активности и мелкие фиксы